# IOT-Sound

./: .gitignore  Cargo.toml  README.md  sprint-reports.md
backend/: Cargo.toml
iot_sound_api/: Cargo.toml
iot_sound_api/src/: main.rs
iot_sound_backend/: Cargo.toml
iot_sound_backend/src/: lib.rs  main.rs
iot_sound_database/: Cargo.toml
iot_sound_database/src/: lib.rs
iot_sound_frontend/: index.html  package-lock.json  package.json
iot_sound_frontend/src/: App.tsx  index.css
iot_sound_frontend/src/components/: content.tsx  historicaldata.tsx  home.tsx  logs.tsx  recentdata.tsx  sensors.tsx  sidebar.tsx
iot_sound_sensor/: Cargo.toml
iot_sound_sensor/src/: loudness_sensor_simulator.rs  main.rs
