[package]
name = "iot_sound_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio-postgres = "0.7.7"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
deadpool-postgres = "0.10.3"
