[package]
name = "iot_sound_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.17.0"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = "0.7.7"
bytes = "1"

iot_sound_database = { path = "../iot_sound_database" }
json = "0.12.4"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
