[package]
name = "iot_sound_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.17.0"
dotenv = "0.15.0"
tokio = { version = "1.23.1", features = ["full"] }
bytes = "1"

iot_sound_database = { path = "../iot_sound_database" }

serde = { version = "1.0.147", features = ["derive"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
