[package]
name = "iot_sound_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.7"
deadpool-postgres = "0.10.3"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }