[package]
name = "iot_sound_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.17.0"
dotenv = "0.15.0"
tokio = { version = "1.23.1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
rand = "0.8.5"

iot_sound_backend = { path = "../iot_sound_backend" }